overflow scroll added in team overview bullpen for the when chart doesn't scale when the browser is resized, but not refreshed. this will prevent the chart from pushing outside of its parent div.

--- a/public/less/team-overview/bullpen.less
+++ b/public/less/team-overview/bullpen.less
@@ -37,12 +37,13 @@
         font-size: 1em;
     }
     .bullpen-holder {
-      
+
       // transform: scale(.8);
     }
   }
   /* Small Devices, Tablets */
   @media (max-width: 768px) {
+    overflow: scroll;
    .bullpen-holder {
       // transform: scale(.4);
     }
